<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.pages.RegistrationFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            style="@style/TextTitle"
            android:id="@+id/title"
            android:text="@string/reg_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            style="@style/EditText"
            android:id="@+id/editNumber"
            android:layout_marginTop="36dp"
            android:hint="@string/reg_editNumber"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
            style="@style/EditText"
            android:id="@+id/editEmail"
            android:layout_marginTop="18dp"
            android:hint="@string/reg_editEmail"
            app:layout_constraintTop_toBottomOf="@id/editNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
            style="@style/EditText"
            android:id="@+id/editPass"
            android:layout_marginTop="18dp"
            android:hint="@string/reg_editPass"
            app:layout_constraintTop_toBottomOf="@id/editEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
            style="@style/EditText"
            android:id="@+id/editReturnPass"
            android:layout_marginTop="18dp"
            android:hint="@string/reg_editReturnPass"
            app:layout_constraintTop_toBottomOf="@id/editPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            style="@style/Button"
            android:id="@+id/btnReg"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_border"
            android:text="@string/reg_btnReg"
            android:textColor="@color/button_active"
            app:layout_constraintTop_toBottomOf="@+id/editReturnPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/btnReg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                style="@style/Body15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="4dp"
                android:text="@string/reg_question"/>
            <TextView
                style="@style/Body15Medium"
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_btnLogin"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>