<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_tertiary"
    android:padding="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:id="@+id/img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_category_pill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/name"
        style="@style/Body15Medium"
        android:layout_marginStart="18dp"
        android:text="@string/item_medicines_activ_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/lin_Count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img"
        app:layout_constraintTop_toBottomOf="@+id/name">
        <TextView
            style="@style/Body12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_medicines_activ_title_count"
            android:textColor="@color/text_hint" />
        <TextView
            android:id="@+id/count"
            style="@style/Body12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/item_medicines_activ_count"
            android:textColor="@color/text_hint" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin_Days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img"
        app:layout_constraintTop_toBottomOf="@+id/lin_Count">
        <TextView
            style="@style/Body12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_medicines_activ_title_days"
            android:textColor="@color/text_hint"/>
        <TextView
            android:id="@+id/days"
            style="@style/Body12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/item_medicines_activ_days"
            android:textColor="@color/text_hint" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>