<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            style="@style/Body17Medium"
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addMedicines_drug_title"
            app:layout_constraintEnd_toStartOf="@+id/btnClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            style="@style/Body15"
            android:id="@+id/name"
            android:layout_marginTop="8dp"
            android:text="@string/addMedicines_drug_name"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15Medium"
            android:id="@+id/titleDescription"
            android:layout_marginTop="18dp"
            android:text="@string/addMedicines_drug_description"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15"
            android:id="@+id/description"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titleDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15Medium"
            android:id="@+id/titleIngredients"
            android:layout_marginTop="18dp"
            android:text="@string/addMedicines_drug_ingredients"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15"
            android:id="@+id/ingredients"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titleIngredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15Medium"
            android:id="@+id/titleReleases"
            android:layout_marginTop="18dp"
            android:text="@string/addMedicines_drug_releases"
            app:layout_constraintTop_toBottomOf="@id/ingredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15"
            android:id="@+id/releases"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titleReleases"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15Medium"
            android:id="@+id/titleComposition"
            android:layout_marginTop="18dp"
            android:text="@string/addMedicines_drug_composition"
            app:layout_constraintTop_toBottomOf="@id/releases"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15"
            android:id="@+id/composition"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titleComposition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15Medium"
            android:id="@+id/titleIndications"
            android:layout_marginTop="18dp"
            android:text="@string/addMedicines_drug_indications"
            app:layout_constraintTop_toBottomOf="@id/composition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15"
            android:id="@+id/indications"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titleIndications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15Medium"
            android:id="@+id/titleContraindications"
            android:layout_marginTop="18dp"
            android:text="@string/addMedicines_drug_contraindications"
            app:layout_constraintTop_toBottomOf="@id/indications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body15"
            android:id="@+id/contraindications"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titleContraindications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>