<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            style="@style/Body17Medium"
            android:id="@+id/title"
            android:text="@string/settings_dialog2_title"
            app:layout_constraintEnd_toStartOf="@+id/btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/btn"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            style="@style/Body17"
            android:id="@+id/subtitle1"
            android:layout_marginTop="18dp"
            android:text="@string/settings_dialog2_subtitle1"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            style="@style/Body17"
            android:id="@+id/subtitle2"
            android:layout_marginTop="18dp"
            android:text="@string/settings_dialog2_subtitle2"
            app:layout_constraintTop_toBottomOf="@id/subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>